@@ -5,6 +5,7 @@
  - fixed bug with import extgallery (mjoel/goffy)
  - added new preference image_target (lupin/goffy)
  - show only albums with perm to edit in upload list (goffy)
+ - rebuilt update functions (added wggallery_check_db) (goffy)
  
 <h5>1.12 RC1</h5>  [2019/../..]
 <hr>
